// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DigilibImageCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationDesign"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Keniger, Michael, 1947-
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      1986
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Conveyor, copper mine, Mount Morgan
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`DigilibImageCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationDesign"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
